# md-viewer-py

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION.md  IMPROVEMENTS.md  README.md  md-viewer.py  pyproject.toml
.agents/: product-marketing-context.md
examples/: anchor-test.md  audio-examples.md  math-examples.md  mermaid-examples.md
src/md_viewer/: __main__.py  changelog.py  scanner.py  server.py
src/md_viewer/static/: app.js  index.html  style.css
src/md_viewer/static/css/: 01-base.css  02-header.css  03-search.css  04-sidebar.css  05-content.css  05b-callouts.css  05b-slider.css  06-print.css  07-theme.css  08-editor.css  09-dashboard.css  10-modals.css  11-tabs.css  12-toc.css  13-stale.css
src/md_viewer/static/js/: 01-state.js  02-mermaid.js  02b-callouts.js  02c-wikilinks.js  02d-math.js  03-markdown.js  04-tabs.js  05-dashboard.js  06-nav.js  07-files.js  08-sections.js  09-toc.js  10-search.js  11-utils.js  11b-slider.js  12-theme.js  13-init.js  14-sse.js  15-editor.js  16-modals.js  17-kbd-hints.js
