[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "md-viewer"
dynamic = ["version"]
description = "Drop-in single-file Markdown viewer for any folder"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
mdview = "md_viewer.server:main"

[tool.setuptools.dynamic]
version = {attr = "md_viewer.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
md_viewer = ["static/*"]
